Small fixes; Added tests